--- a/package.json
+++ b/package.json
@@ -11,5 +11,8 @@
     "@playwright/test": "^1.47.2",
     "@types/node": "^22.7.4",
     "eslint": "^8.14.0"
+  },
+  "dependencies": {
+    "dotenv": "^16.4.5"
   }
 }
