--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "devDependencies": {
     "@playwright/test": "^1.47.2",
     "@types/node": "^22.7.4",
+    "allure-playwright": "^3.0.4",
     "eslint": "^8.14.0"
   },
   "dependencies": {
